Tailwind CSS added

--- a/profiles/templates/profile_detail.html
+++ b/profiles/templates/profile_detail.html
@@ -1,4 +1,6 @@
 <div>
-  <h2>{{ object.name }</h2>
+  <h2>{{ object.profile_name }}</h2>
   <p>{{ object.profile }}</p>
 </div>
+
+<a href="{% url 'profile-edit' %}" class=""><span class="">Edit Profile</span></a>
