--- a/profiles/templates/profile_list.html
+++ b/profiles/templates/profile_list.html
@@ -1,6 +1,9 @@
 <h1>Profiles</h1>
-{% for profiles in object_list %}
+{% for profile in object_list %}
   <ul>
     <li><a href="{{ profile.get_absolute_url }}">{{ profile.profile_name }}</a></li>
   </ul>
+{% empty %}
+    <li>No profiles yet.</li>
 {% endfor %}
+
