--- a/keenclone/templates/base.html
+++ b/keenclone/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
   <head>
@@ -6,6 +7,7 @@
     {% endblock %}
   </head>
   <body>
+  <div class="container">
     {% block body %}
 
     {% if messages %}
@@ -20,16 +22,24 @@
     {% endif %}
 
     <div>
-      <strong>Menu:</strong>
-      <ul>
+      <strong>Menu for
+      {% if user.is_authenticated %}
+      {{ user.email }}
+      {% endif %}
+      
+      </strong>
+      <ul class="nav">
+        <li class="nav-item"><a class="nav-link" href="{% url 'home' %}">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="{% url 'admin:index' %}">Admin</a></li>
         {% if user.is_authenticated %}
-        <li><a href="{% url 'account_email' %}">Change E-mail</a></li>
-        <li><a href="{% url 'account_logout' %}">Sign Out</a></li>
+        <li class="nav-item"><a class="nav-link" href="{% url 'account_email' %}">Change E-mail</a></li>
+        <li class="nav-item"><a class="nav-link" href="{% url 'account_logout' %}">Sign Out</a></li>
+        <li class="nav-item"><a class="nav-link" href="{% url 'profile-edit' %}">Edit Profile</a></li>
         {% else %}
-        <li><a href="{% url 'account_login' %}">Sign In</a></li>
-        <li><a href="{% url 'account_signup' %}">Sign Up</a></li>
+        <li class="nav-item"><a class="nav-link" href="{% url 'account_login' %}">Sign In</a></li>
+        <li class="nav-item"><a class="nav-link" href="{% url 'account_signup' %}">Sign Up</a></li>
         {% endif %}
-        <li><a href="{% url 'profile-list' %}">Profile List</a></li>
+        <li class="nav-item"><a class="nav-link" href="{% url 'profile-list' %}">Profile List</a></li>
       </ul>
     </div>
     {% block content %}
@@ -38,4 +48,8 @@
     {% block extra_body %}
     {% endblock %}
   </body>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="{% static 'star-ratings/css/star-ratings.css' %}">
+  <script type="text/javascript" src="{% static 'star-ratings/js/dist/star-ratings.min.js' %}"></script>
+  </div>
 </html>
