--- a/profiles/templates/profiles/profile_list.html
+++ b/profiles/templates/profiles/profile_list.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load ratings %}
 
 
 {% block content %}
@@ -6,11 +7,21 @@
 <h1>Profiles</h1>
 
 {% for profile in object_list %}
-  <ul>
-    <li><a href="{{ profile.get_absolute_url }}">{{ profile.profile_name }}</a></li>
-  </ul>
+
+
+
+<div class="card mb-5">
+  <h5 class="card-header"><a href="{{ profile.get_absolute_url }}">{{ profile.profile_name }}</a></h5>
+  <div class="card-body">
+    <h5 class="card-title">{{ profile.profile }}</h5>
+    <p class="card-text">{% ratings object %}</p>
+    <a href="{{ profile.get_absolute_url }}" class="btn btn-primary">See profile</a>
+  </div>
+</div>
+
+
 {% empty %}
-    <li>No profiles yet.</li>
+No profiles yet.
 {% endfor %}
 
 {% endblock %}
