--- a/profiles/templates/profiles/profile_detail.html
+++ b/profiles/templates/profiles/profile_detail.html
@@ -1,17 +1,84 @@
-{% extends 'base.html' %}
-
+{% extends 'index.html' %}
 {% load ratings %}
+{% load reviews %}
+{% get_review_count for profile as review_count %}
+{% get_rating for profile as avg_rating %}
+
+
+
 
 {% block content %}
 
+<div class="row mt-2">
 
+    <div id="content"  class="col-sm-8 mb-5">
+      <!-- Content goes here -->
 
-<div class="card">
-  <h5 class="card-header">{{ object.profile_name }}</h5>
-  <div class="card-body">
-    <h5 class="card-title">{{ object.profile }}</h5>
-    <p class="card-text">{% ratings object %}</p>
-    <a href="{% url 'profile-edit' %}" class="btn btn-primary">Edit Profile</a>
+    <div class="card">
+      <h5 class="card-header">{{ object.profile_name }} {% render_rating for profile %}</h5>
+      <div class="card-body">
+        <h5 class="card-title">
+          {% if rating %}
+          {{ rating }}
+          {% endif %}
+          {% if show_rating_text %}
+          {{ rating_text }}
+          {% endif %}
+        </h5>
+        <p class="card-text">{{ object.profile }}</p>
+        <p class="card-text">{% render_review_list for profile %}</p>
+        {% comment %} <p class="card-text">{% render_comment_form for profile %}</p> {% endcomment %}
+        <a href="{% url 'profile-edit' %}" class="btn btn-primary">Edit Profile</a>
+      </div>
+      {% if user.is_authenticated %}
+      <div class="card-body">
+        {% get_review_form for profile as user %}
+        {% render_review_form for profile %}
+      </div>
+      {% endif %}
+    </div>
+
   </div>
+
+  <div id="main-content" class="col-sm-4 mb-2">
+    <div id="sidebar" class="sidebar">
+        <div class="sidebar__inner">
+            <!-- Content goes here -->
+          <div class="card">
+            <h5 class="card-header">Como Conectar</h5>
+            <div class="card-body">
+              <h5 class="card-title"></h5>
+              <p class="card-text">
+              
+                        {% if rating %}
+          {{ rating }}
+          {% endif %}
+          {% if show_rating_text %}
+          {{ rating_text }}
+          {% endif %}
+              
+              
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <a href="#" class="btn btn-primary btn-block disabled" >Agenda una hora</a>
+              <a href="#" class="btn btn-primary btn-block"><span class="badge rounded-pill bg-success">ahora disponible</span> Video Conferencia</a>
+            </div>
+          </div>
+        </div>
+    </div>
+  </div>
+
+
+
 </div>
+
+<script type="text/javascript">
+  var sidebar = new StickySidebar('#sidebar', {
+      containerSelector: '#main-content',
+      innerWrapperSelector: '.sidebar__inner',
+      topSpacing: 20,
+      bottomSpacing: 20
+  });
+</script>
+
+
 {% endblock %}
