--- a/profiles/templates/profiles/profile_list.html
+++ b/profiles/templates/profiles/profile_list.html
@@ -1,5 +1,5 @@
-{% extends 'base.html' %}
-{% load ratings %}
+{% extends 'index.html' %}
+{% load ratings reviews %}
 
 
 {% block content %}
@@ -7,15 +7,31 @@
 <h1>Profiles</h1>
 
 {% for profile in object_list %}
-
+{% get_rating for profile as avg_rating %}
 
 
 <div class="card mb-5">
-  <h5 class="card-header"><a href="{{ profile.get_absolute_url }}">{{ profile.profile_name }}</a></h5>
+  <h5 class="card-header d-flex flex-row justify-content-between">
+    <div class="d-flex "> 
+      {{ profile.profile_name }}
+    </div>
+    <div class="d-flex ">
+      {% if user.is_authenticated %}
+        <span class="badge rounded-pill bg-success">ahora disponible</span>
+      {% endif %}      
+    </div>
+  </h5>
   <div class="card-body">
-    <h5 class="card-title">{{ profile.profile }}</h5>
-    <p class="card-text">{% ratings object %}</p>
-    <a href="{{ profile.get_absolute_url }}" class="btn btn-primary">See profile</a>
+    <h5 class="card-title"></h5>
+    <p class="card-text">{{ profile.profile }}</p>
+  </div>
+  <div class="card-body d-flex flex-row justify-content-between">
+      <div class="d-flex "> 
+        <a href="{{ profile.get_absolute_url }}" class="btn btn-primary">Ver Perfil</a>
+      </div>
+      <div class="d-flex ">
+        {% render_rating for profile %}
+      </div>
   </div>
 </div>
 
