--- a/keenclone/templates/nav/navbar.html
+++ b/keenclone/templates/nav/navbar.html
@@ -12,7 +12,7 @@
     {% if user.is_authenticated %}
     <li class="nav-item"><a class="nav-link" href="{% url 'account_email' %}">Change E-mail</a></li>
     <li class="nav-item"><a class="nav-link" href="{% url 'account_logout' %}">Sign Out</a></li>
-    <li class="nav-item"><a class="nav-link" href="{% url 'profile-edit' %}">Edit Profile</a></li>
+    <li class="nav-item"><a class="nav-link" href="#">Edit Profile</a></li>
     {% else %}
     <li class="nav-item"><a class="nav-link" href="{% url 'account_login' %}">Sign In</a></li>
     <li class="nav-item"><a class="nav-link" href="{% url 'account_signup' %}">Sign Up</a></li>
