--- a/profiles/templates/profiles/profile_list.html
+++ b/profiles/templates/profiles/profile_list.html
@@ -9,35 +9,66 @@
 {% for profile in object_list %}
 {% get_rating for profile as avg_rating %}
 
+<div class="row mt-2">
+    <div id="content"  class="col-sm-8 mb-5">
+        <div class="card">
+          <h5 class="card-header d-flex flex-row justify-content-between">
+            <div class="d-flex "> 
+              {{ profile.profile_name }}
+            </div>
+            <div class="d-flex ">
+              {% if user.is_authenticated %}
+                <span class="badge rounded-pill bg-success">ahora disponible</span>
+              {% endif %}      
+            </div>
+          </h5>
+          <div class="card-body">
+            <h5 class="card-title"></h5>
+            <p class="card-text">{{ profile.profile }}</p>
+          </div>
+          <div class="card-body d-flex flex-row justify-content-between">
+              <div class="d-flex "> 
+                <a href="{{ profile.get_absolute_url }}" class="btn btn-primary">Ver Perfil</a>
+              </div>
+              <div class="d-flex ">
+                {% render_rating for profile %}
+              </div>
+          </div>
+        </div>
+    </div>
 
-<div class="card mb-5">
-  <h5 class="card-header d-flex flex-row justify-content-between">
-    <div class="d-flex "> 
-      {{ profile.profile_name }}
+      <div id="main-content" class="col-sm-4 mb-2">
+    <div id="sidebar" class="sidebar">
+        <div class="sidebar__inner">
+            <!-- Content goes here -->
+          <div class="card">
+            <h5 class="card-header">Como Conectar</h5>
+            <div class="card-body">
+              <h5 class="card-title"></h5>
+              <p class="card-text">
+              
+                        {% if rating %}
+          {{ rating }}
+          {% endif %}
+          {% if show_rating_text %}
+          {{ rating_text }}
+          {% endif %}
+              
+              
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <a href="#" class="btn btn-primary btn-block disabled" >Agenda una hora</a>
+              <a href="#" class="btn btn-primary btn-block"><span class="badge rounded-pill bg-success">ahora disponible</span> Video Conferencia</a>
+            </div>
+          </div>
+        </div>
     </div>
-    <div class="d-flex ">
-      {% if user.is_authenticated %}
-        <span class="badge rounded-pill bg-success">ahora disponible</span>
-      {% endif %}      
-    </div>
-  </h5>
-  <div class="card-body">
-    <h5 class="card-title"></h5>
-    <p class="card-text">{{ profile.profile }}</p>
   </div>
-  <div class="card-body d-flex flex-row justify-content-between">
-      <div class="d-flex "> 
-        <a href="{{ profile.get_absolute_url }}" class="btn btn-primary">Ver Perfil</a>
-      </div>
-      <div class="d-flex ">
-        {% render_rating for profile %}
-      </div>
-  </div>
-</div>
 
 
 {% empty %}
 No profiles yet.
 {% endfor %}
+
+
 
 {% endblock %}
