working on profile forms

--- a/keenclone/templates/nav/navbar.html
+++ b/keenclone/templates/nav/navbar.html
@@ -17,7 +17,7 @@
     <li class="nav-item"><a class="nav-link" href="{% url 'account_login' %}">Sign In</a></li>
     <li class="nav-item"><a class="nav-link" href="{% url 'account_signup' %}">Sign Up</a></li>
     {% endif %}
-    <li class="nav-item"><a class="nav-link" href="{% url 'profile-list' %}">Profile List</a></li>
+    <li class="nav-item"><a class="nav-link" href="{% url 'profile:profile-list' %}">Profile List</a></li>
   </ul>
 </div>
 
