--- a/profiles/templates/profiles/profile_form.html
+++ b/profiles/templates/profiles/profile_form.html
@@ -1,11 +1,33 @@
 {% extends 'index.html' %}
+{% load crispy_forms_tags %}
+{% load account %}
+
 
 {% block content %}
 
-<form method="post">  
-    {% csrf_token %}  
-    {{ form.as_p }}  
-    <input type="submit" value="Save">  
-</form> 
+<div class="row mt-5 mb-5">
+    <div class="col-sm">
+
+        <h2>Tu cuenta {% user_display user %}</h2>
+
+    </div>
+</div>
+
+<div class="row mt-5 mb-5">
+    <div class="col-sm-4 mb-5">
+
+        {% include "nav/account_nav.html" %}
+
+    </div>
+    <div class="col-sm-8">
+
+        <form method="post">  
+            {% csrf_token %}  
+            {{ form|crispy }} 
+            <input type="submit" value="Save" class="btn btn-primary">  
+        </form> 
+        
+    </div>
+</div>
 
 {% endblock %}
