--- a/keenclone/templates/account/email.html
+++ b/keenclone/templates/account/email.html
@@ -4,22 +4,21 @@
 
 {% block head_title %}{% trans "E-mail Addresses" %}{% endblock %}
 
-{% block content %}
-    <h1>{% trans "E-mail Addresses" %}</h1>
+{% block account %}
+
+
+<h3>{% trans "E-mail Addresses" %}</h3>
 {% if user.emailaddress_set.all %}
 <p>{% trans 'The following e-mail addresses are associated with your account:' %}</p>
 
 <form action="{% url 'account_email' %}" class="email_list" method="post">
 {% csrf_token %}
 <fieldset class="blockLabels">
-
-  {% for emailaddress in user.emailaddress_set.all %}
+{% for emailaddress in user.emailaddress_set.all %}
 <div class="ctrlHolder">
-      <label for="email_radio_{{forloop.counter}}" class="{% if emailaddress.primary %}primary_email{%endif%}">
-
-      <input id="email_radio_{{forloop.counter}}" type="radio" name="email" {% if emailaddress.primary or user.emailaddress_set.count == 1 %}checked="checked"{%endif %} value="{{emailaddress.email}}"/>
-
-{{ emailaddress.email }}
+    <label for="email_radio_{{forloop.counter}}" class="{% if emailaddress.primary %}primary_email{%endif%}">
+    <input id="email_radio_{{forloop.counter}}" type="radio" name="email" {% if emailaddress.primary or user.emailaddress_set.count == 1 %}checked="checked"{%endif %} value="{{emailaddress.email}}"/>
+    {{ emailaddress.email }}
     {% if emailaddress.verified %}
     <span class="verified">{% trans "Verified" %}</span>
     {% else %}
@@ -28,30 +27,27 @@
       {% if emailaddress.primary %}<span class="primary">{% trans "Primary" %}</span>{% endif %}
 </label>
 </div>
-  {% endfor %}
+{% endfor %}
 
-<div class="buttonHolder">
-      <button class="secondaryAction" type="submit" name="action_primary" >{% trans 'Make Primary' %}</button>
-      <button class="secondaryAction" type="submit" name="action_send" >{% trans 'Re-send Verification' %}</button>
-      <button class="primaryAction" type="submit" name="action_remove" >{% trans 'Remove' %}</button>
+<div class="d-flex justify-content-center btn-group mt-3 mb-5" role="group">
+    <button class="btn btn-sm btn-outline-primary" type="submit" name="action_primary" >{% trans 'Make Primary' %}</button>
+    <button class="btn btn-sm btn-outline-primary" type="submit" name="action_send" >{% trans 'Re-send Verification' %}</button>
+    <button class="btn btn-sm btn-outline-primary" type="submit" name="action_remove" >{% trans 'Remove' %}</button>
 </div>
-
 </fieldset>
 </form>
-
 {% else %}
 <p><strong>{% trans 'Warning:'%}</strong> {% trans "You currently do not have any e-mail address set up. You should really add an e-mail address so you can receive notifications, reset your password, etc." %}</p>
-
 {% endif %}
 
 
-    <h2>{% trans "Add E-mail Address" %}</h2>
+    <h3>{% trans "Add E-mail Address" %}</h3>
 
-    <form method="post" action="{% url 'account_email' %}" class="add_email">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button name="action_add" type="submit">{% trans "Add E-mail" %}</button>
-    </form>
+<form method="post" action="{% url 'account_email' %}" class="add_email">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button name="action_add" type="submit" class="btn btn-outline-primary">{% trans "Add E-mail" %}</button>
+</form>
 
 {% endblock %}
 
