--- a/keenclone/templates/socialaccount/connections.html
+++ b/keenclone/templates/socialaccount/connections.html
@@ -4,8 +4,8 @@
 
 {% block head_title %}{% trans "Account Connections" %}{% endblock %}
 
-{% block content %}
-<h1>{% trans "Account Connections" %}</h1>
+{% block account %}
+<h3>{% trans "Account Connections" %}</h3>
 
 {% if form.accounts %}
 <p>{% blocktrans %}You can sign in to your account using any of the following third party accounts:{% endblocktrans %}</p>
@@ -43,7 +43,7 @@
 <p>{% trans 'You currently have no social network accounts connected to this account.' %}</p>
 {% endif %}
 
-<h2>{% trans 'Add a 3rd Party Account' %}</h2>
+<h3>{% trans 'Add a 3rd Party Account' %}</h3>
 
 <ul class="socialaccount_providers">
 {% include "socialaccount/snippets/provider_list.html" with process="connect" %}
