--- a/keenclone/templates/nav/account_nav.html
+++ b/keenclone/templates/nav/account_nav.html
@@ -1,9 +1,7 @@
 <div class="card" style="">
   <ul class="list-group list-group-flush">
-    <li class="list-group-item"><a class="" href="{% url 'profile-update' %}">Mi Perfil</a></li>
+    {% comment %} <li class="list-group-item"><a class="" href="{% url 'profile:profile-update' pk=object.id %}">Mi Perfil</a></li> {% endcomment %}
     <li class="list-group-item"><a class="" href="{% url 'account_email' %}">Change E-mail</a></li>
     <li class="list-group-item"><a class="" href="{% url 'socialaccount_connections' %}">Redes Sociales</a></li>
-    <li class="list-group-item">Dapibus ac facilisis in</li>
-    <li class="list-group-item">Vestibulum at eros</li>
   </ul>
 </div>
