--- a/keenclone/templates/nav/navbar.html
+++ b/keenclone/templates/nav/navbar.html
@@ -1,24 +1,34 @@
 {% load i18n account %}
-<div>
-  <strong>Menu for
-    {% if user.is_authenticated %}
-    {{ user.email }}
-    {% endif %}
-
-  </strong>
-  <ul class="nav">
-    <li class="nav-item"><a class="nav-link" href="{% url 'home' %}">Home</a></li>
-    <li class="nav-item"><a class="nav-link" href="{% url 'admin:index' %}">Admin</a></li>
-    {% if user.is_authenticated %}
-    <li class="nav-item"><a class="nav-link" href="{% url 'account_email' %}">Change E-mail</a></li>
-    <li class="nav-item"><a class="nav-link" href="{% url 'account_logout' %}">Sign Out</a></li>
-    <li class="nav-item"><a class="nav-link" href="#">Edit Profile</a></li>
-    {% else %}
-    <li class="nav-item"><a class="nav-link" href="{% url 'account_login' %}">Sign In</a></li>
-    <li class="nav-item"><a class="nav-link" href="{% url 'account_signup' %}">Sign Up</a></li>
-    {% endif %}
-    <li class="nav-item"><a class="nav-link" href="{% url 'profile:profile-list' %}">Profile List</a></li>
-  </ul>
-</div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
 
 
+    <a class="navbar-brand" href="#">
+        {% if user.is_authenticated %}
+        {{ user.email }}
+        {% endif %}
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+      <ul class="navbar-nav mr-auto mb-2 mb-lg-0">
+        <li class="nav-item"><a class="nav-link" href="{% url 'home' %}">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="{% url 'admin:index' %}">Admin</a></li>
+        {% if user.is_authenticated %}
+        <li class="nav-item"><a class="nav-link" href="{% url 'account_email' %}">Change E-mail</a></li>
+        <li class="nav-item"><a class="nav-link" href="{% url 'account_logout' %}">Sign Out</a></li>
+        {% comment %} <li class="nav-item"><a class="nav-link" href="{% url 'profile:my-profile' pk=user.pk %}">Mi Cuenta</a></li> {% endcomment %}
+        {% else %}
+        <li class="nav-item"><a class="nav-link" href="{% url 'account_login' %}">Sign In</a></li>
+        <li class="nav-item"><a class="nav-link" href="{% url 'account_signup' %}">Sign Up</a></li>
+        {% endif %}
+        <li class="nav-item"><a class="nav-link" href="{% url 'profile:profile-list' %}">Profile List</a></li>
+      </ul>
+
+    </div>
+
+  </div>
+</nav>
