--- a/profiles/templates/profiles/profile_delete.html
+++ b/profiles/templates/profiles/profile_delete.html
@@ -21,10 +21,10 @@
     </div>
     <div class="col-sm-8">
 
-        <form method="post" enctype="multipart/form-data">  
+        <form method="post">  
             {% csrf_token %}  
             {{ form|crispy }} 
-            <input type="submit" value="Save" class="btn btn-primary">  
+            <input type="submit" value="Segoro que quieres eliminar tu perfil?" class="btn btn-primary">  
         </form> 
         
     </div>
