--- a/profiles/templates/profiles/profile_list.html
+++ b/profiles/templates/profiles/profile_list.html
@@ -10,67 +10,51 @@
 {% get_rating for profile as avg_rating %}
 
 <div class="row mt-2">
-
-
-    <div id="content"  class="col-sm-8 mb-5">
+    <div id="content"  class="">
 
         <div class="card">
-          <h5 class="card-header d-flex flex-row justify-content-between">
-            <div class="d-flex "> 
-              {{ profile.profile_name }}
-            </div>
-            <div class="d-flex ">
-              {% if user.is_authenticated %}
-                <span class="badge rounded-pill bg-success">ahora disponible</span>
-              {% endif %}      
-            </div>
-          </h5>
-          <div class="card-body">
-            <h5 class="card-title"></h5>
-            <p class="card-text">{{ profile.profile }}</p>
-            {% if profile.picture %}
-            <img src="{{ profile.picture.url }}" alt="{{ profile.picture }}" style="width:200px; height:200px; border-radius: 100%">
-            {% endif %}
-          </div>
-          <div class="card-body d-flex flex-row justify-content-between">
-              <div class="d-flex "> 
-                <a href="{{ profile.get_absolute_url }}" class="btn btn-primary">Ver Perfil</a>
+
+          <div class="card-body d-md-inline-flex">
+
+              <div class="col-md-2">
+                <div class="d-flex flex-column justify-content-center align-items-center">
+                  {% if profile.picture %}
+                  <img src="{{ profile.picture.url }}" alt="{{ profile.picture }}" style="width:160px; height:160px; border-radius: 100%">
+                  {% endif %}
+                </div>
+
+
+
               </div>
-              <div class="d-flex ">
-                {% render_rating for profile %}
+
+              <div class="col-md ">
+                  <h2 class="card-title mt-2">{{ profile.profile_name }}</h2>
+                  <div class="mb-2 mt-1">{% render_rating for profile %}</div>
+                  <p class="card-text">{{ profile.profile_excerpt }}</p>
+                    <div class="card bg-light mr-2 mb-2" style="">
+                      <div class="card-body">
+                        <h5 class="card-title">Especialidades</h5>
+                        <p class="card-text">{{ profile.specialty }}</p>
+                      </div>
+                    </div>
+                  <div class=" mr-2 d-flex justify-content-end">
+                    <a href="{{ profile.get_absolute_url }}" class="btn btn-outline-info">Ver Perfil</a>
+                  </div>
               </div>
+
+              <div class="col-md-2 align-self-end">
+                    <h5 class="card-title">Como Conectar</h5>
+                    <p class="card-text"><small>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</small></p>
+                    <a href="#" class="btn btn-primary btn-block disabled" >Agenda una hora</a>
+                    <a href="#" class="btn btn-primary btn-block"> Video Conferencia</a>
+              </div>      
+
           </div>
+
         </div>
 
     </div>
-
-
-
-    <div id="main-content" class="col-sm-4 mb-2">
-      <div id="sidebar" class="sidebar">
-        <div class="sidebar__inner">
-            <!-- Content goes here -->
-          <div class="card">
-            <h5 class="card-header">Como Conectar</h5>
-            <div class="card-body">
-              <h5 class="card-title"></h5>
-              <p class="card-text">
-                {% if rating %}
-                {{ rating }}
-                {% endif %}
-                {% if show_rating_text %}
-                {{ rating_text }}
-                {% endif %}
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <a href="#" class="btn btn-primary btn-block disabled" >Agenda una hora</a>
-              <a href="#" class="btn btn-primary btn-block"> Video Conferencia</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-
 </div>
 
 
