--- a/keenclone/templates/nav/pagination.html
+++ b/keenclone/templates/nav/pagination.html
@@ -1,6 +1,6 @@
 {% if is_paginated %}
 <nav aria-label="Page navigation example">
-    <ul class="pagination justify-content-center pagination-sm mt-5">
+    <ul class="pagination justify-content-center pagination-sm mt-2 mb-2">
         {% if page_obj.has_previous %}
           <!-- If it ain't a search result display, don't append the search query
                to the URL. -->
