--- a/keenclone/templates/nav/navbar.html
+++ b/keenclone/templates/nav/navbar.html
@@ -17,6 +17,7 @@
       <ul class="navbar-nav mr-auto mb-2 mb-lg-0">
         <li class="nav-item"><a class="nav-link" href="{% url 'home' %}">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="{% url 'admin:index' %}">Admin</a></li>
+        <li class="nav-item"><a class="nav-link" href="{% url 'specialty:specialty-list' %}">Especialidades</a></li>
         {% if user.is_authenticated %}
         <li class="nav-item"><a class="nav-link" href="{% url 'account_email' %}">Change E-mail</a></li>
         <li class="nav-item"><a class="nav-link" href="{% url 'account_logout' %}">Sign Out</a></li>
