--- a/profiles/templates/profiles/profile_card_compact.html
+++ b/profiles/templates/profiles/profile_card_compact.html
@@ -1,25 +1,8 @@
-{% extends 'index.html' %}
-{% load ratings reviews %}
-
-
-{% block content %}
-<script>
-var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-toggle="tooltip"]'))
-var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
-  return new bootstrap.Tooltip(tooltipTriggerEl)
-})
-</script>
-
-
-{% include "nav/pagination.html" %}
-
-{% for profile in object_list %}
+{% load reviews %}
+{% get_review_count for profile as review_count %}
 {% get_rating for profile as avg_rating %}
 
-<div class="row mt-2">
-    <div id="content"  class="">
-
-        <div class="card">
+        <div class="card mb-2">
 
           <div class="card-body d-md-inline-flex">
 
@@ -66,15 +49,3 @@ var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
           </div>
 
         </div>
-
-    </div>
-</div>
-
-
-{% empty %}
-No profiles yet.
-{% endfor %}
-
-{% include "nav/pagination.html" %}
-
-{% endblock %}
