change to Tailwind

--- a/keenclone/templates/reviews/posted.html
+++ b/keenclone/templates/reviews/posted.html
@@ -1,4 +1,4 @@
-{% extends 'index.html' %}
+{% extends 'base.html' %}
 {% load reviews i18n %}
 {% block title %}
 {% trans "Thank you for your review" %}
