--- a/profiles/templates/profiles/profile_card_compact.html
+++ b/profiles/templates/profiles/profile_card_compact.html
@@ -2,7 +2,7 @@
 {% get_review_count for profile as review_count %}
 {% get_rating for profile as avg_rating %}
 
-        <div class="card mb-2">
+        <div class="card shadow mb-2">
 
           <div class="card-body d-md-inline-flex">
 
