--- a/profiles/templates/profiles/profile_detail.html
+++ b/profiles/templates/profiles/profile_detail.html
@@ -1,4 +1,4 @@
-{% extends 'index.html' %}
+{% extends 'base.html' %}
 {% load ratings %}
 {% load reviews %}
 {% get_review_count for profile as review_count %}
