--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,9 @@
 @import url(/home/rovak/projects/django-wag/keenclone/node_modules/tailwindcss/base.css);
-@tailwind base;
+
 /*# sourceMappingURL=style.css.map */
+
+@tailwind base;
+
+@tailwind components;
+
+@tailwind utilities;
