--- a/cart/templates/cart/checkout.html
+++ b/cart/templates/cart/checkout.html
@@ -21,17 +21,16 @@
           <div class="card">
 
             <!--Card content-->
-            <form class="card-body">
+            <form method="POST" class="card-body">
+            {% csrf_token %}
 
               <!--Grid row-->
               <div class="row">
 
-              <form method='POST'>
-               {% csrf_token %}
-               {{ form|crispy }}
-               
-               <button class='btn btn-primary' type='submit'>Ir a Pagar</button>
-              </form>
+               {% comment %} <form method="post">  
+                {% csrf_token %}  
+                {{ form|crispy }} 
+                <button type="submit" value="Save" class="btn btn-primary">Enviar</button> {% endcomment %}
 
               </div>
               <!--Grid row-->
@@ -39,14 +38,14 @@
               <!--address-->
               <div class="md-form mb-2">
                 {% comment %} <input type="text" id="address" class="form-control" placeholder="1234 Main St"> {% endcomment %}
-                {{ form.street_address }}
+                {{ form.street_address }} 
                 <label for="address" class="">Address</label>
               </div>
 
               <!--address-2-->
               <div class="md-form mb-2">
                 {% comment %} <input type="text" id="address-2" class="form-control" placeholder="Apartment or suite"> {% endcomment %}
-                {{ form.apartment_address }}
+                {{ form.apartment_address }} 
                 <label for="address-2" class="">Address 2 (optional)</label>
               </div>
 
@@ -57,10 +56,11 @@
                 <div class="col-lg-4 col-md-12 mb-4">
 
                   <label for="country">Country</label>
-                  <select class="custom-select d-block w-100" id="country" required>
+                  {% comment %} <select class="custom-select d-block w-100" id="country" required>
                     <option value="">Choose...</option>
                     <option>United States</option>
-                  </select>
+                  </select> {% endcomment %}
+                  {{ form.country }}
                   <div class="invalid-feedback">
                     Please select a valid country.
                   </div>
@@ -68,26 +68,14 @@
                 </div>
                 <!--Grid column-->
 
-                <!--Grid column-->
-                <div class="col-lg-4 col-md-6 mb-4">
 
-                  <label for="state">State</label>
-                  <select class="custom-select d-block w-100" id="state" required>
-                    <option value="">Choose...</option>
-                    <option>California</option>
-                  </select>
-                  <div class="invalid-feedback">
-                    Please provide a valid state.
-                  </div>
-
-                </div>
-                <!--Grid column-->
 
                 <!--Grid column-->
                 <div class="col-lg-4 col-md-6 mb-4">
 
                   <label for="zip">Zip</label>
-                  <input type="text" class="form-control" id="zip" placeholder="" required>
+                  {% comment %} <input type="text" class="form-control" id="zip" placeholder="" required> {% endcomment %}
+                  {{ form.zip }}
                   <div class="invalid-feedback">
                     Zip code required.
                   </div>
@@ -101,23 +89,34 @@
               <hr>
 
               <div class="custom-control custom-checkbox">
-                <input type="checkbox" class="custom-control-input" id="save-info">
-                <label class="custom-control-label" for="save-info">Guardar mi dirección para próxima compra</label>
+                <input {% if form.same_shipping_address.value %}checked{% endif %} type="checkbox" class="custom-control-input" name="same_billing_address" id="save-info">
+                
+                <label class="custom-control-label" for="save-info">Usar misma direccion</label>
+              </div>
+              <div class="custom-control custom-checkbox">
+                <input {% if form.save_info.value %}checked{% endif %} type="checkbox" class="custom-control-input" name="save_info" id="save-info">
+                
+                <label class="custom-control-label" for="save-info">Guardar direccion</label>
               </div>
 
               <hr>
 
               <div class="d-block my-3">
+
+                {% for value, name in form.fields.payment_option.choices %}
                 <div class="custom-control custom-radio">
-                  <input id="credit" name="paymentMethod" type="radio" class="custom-control-input" checked required>
-                  <label class="custom-control-label" for="credit">Stripe</label>
+                  <input id="{{ name }}" name="payment_option" value={{ value }} type="radio" class="custom-control-input" required>
+                  <label class="custom-control-label" for="{{ name }}">{{ name }}</label>
+                {% comment %} {{ form.payment_option }} {% endcomment %}
                 </div>
-                <div class="custom-control custom-radio">
-                  <input id="paypal" name="paymentMethod" type="radio" class="custom-control-input" required>
-                  <label class="custom-control-label" for="paypal">QVO</label>
-                </div>
+                {% endfor %}
+
+
+
               </div>
+
               <hr class="mb-4">
+
               <button class="btn btn-primary btn-lg btn-block" type="submit">Continuar a pagar</button>
 
             </form>
@@ -182,6 +181,8 @@
                 <button class="btn btn-secondary btn-md waves-effect m-0" type="button">Redeem</button>
               </div>
             </div>
+
+
           </form>
           <!-- Promo code -->
 
