--- a/keenclone/templates/base.html
+++ b/keenclone/templates/base.html
@@ -33,10 +33,10 @@
 <body class="h-screen overflow-hidden items-center justify-center" style="background: #edf2f7;">
 
 
-
+    {% include "nav/alert.html" %}
+        
         {% include "nav/navbar.html" %}
-    <div class="container">
-        {% include "nav/messages.html" %}
+    
         
         
 
@@ -50,7 +50,7 @@
         {% endblock %}
 
         {% include "nav/footer.html" %}
-    </div>
+    
 
 
 
