--- a/keenclone/templates/base_hero.html
+++ b/keenclone/templates/base_hero.html
@@ -30,13 +30,13 @@
 
 
 
-<body class="h-screen overflow-hidden items-center justify-center" style="background: #edf2f7;">
+<body style="background: #edf2f7;">
 
+        {% include "nav/alert.html" %}
 
-
-        {% include "nav/navbar.html" %}
-    <div class="container">
-        {% include "nav/messages.html" %}
+        {% include "nav/navbar-hero.html" %}
+    
+        
         
         
 
@@ -50,7 +50,7 @@
         {% endblock %}
 
         {% include "nav/footer.html" %}
-    </div>
+    
 
 
 
