--- a/keenclone/templates/account/signup.html
+++ b/keenclone/templates/account/signup.html
@@ -1,21 +1,55 @@
 {% extends "account/base.html" %}
 
 {% load i18n %}
+{% load tailwind_filters %}
 
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
 {% block content %}
-<h1>{% trans "Sign Up" %}</h1>
 
-<p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
+<div class=" flex items-center justify-center bg-gray-50 py-12 px-4 sm:px-6 lg:px-8 ">
+  <div class="max-w-md w-full shadow-lg rounded-lg border border-gray-400 p-5">
 
-<form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
-  {% csrf_token %}
-  {{ form.as_p }}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-  {% endif %}
-  <button type="submit">{% trans "Sign Up" %} &raquo;</button>
-</form>
+    <div>
+        <h2 class="mt-6 text-center text-3xl leading-9 font-extrabold text-gray-800">
+            {% trans "Sign Up" %}
+        </h2>
+      
+        <p class="mt-2 text-center text-sm leading-5 text-gray-600">
+            {% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}
+        </p>
+    </div>
+
+    <form class="mt-8" method="POST" action="{% url 'account_signup' %}">
+
+      {% csrf_token %}
+      {{ form|crispy }}
+      {% if redirect_field_value %}
+      <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+      {% endif %}
+
+    <div class="mt-6 flex items-center justify-between">
+        <div class="text-sm leading-5">
+            <a href="{% url 'account_reset_password' %}" class="font-medium text-indigo-600 hover:text-indigo-500 focus:outline-none focus:underline transition ease-in-out duration-150">
+                leading text
+            </a>
+        </div>
+    </div>
+
+    <div class="mt-6">
+        <button type="submit" class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm leading-5 font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-500 focus:outline-none focus:border-indigo-700 focus:shadow-outline-indigo active:bg-indigo-700 transition duration-150 ease-in-out">
+            <span class="absolute left-0 inset-y-0 flex items-center pl-3">
+                <svg class="h-5 w-5 text-indigo-500 group-hover:text-indigo-400 transition ease-in-out duration-150" fill="currentColor" viewBox="0 0 20 20">
+                    <path fill-rule="evenodd" d="M5 9V7a5 5 0 0110 0v2a2 2 0 012 2v5a2 2 0 01-2 2H5a2 2 0 01-2-2v-5a2 2 0 012-2zm8-2v2H7V7a3 3 0 016 0z" clip-rule="evenodd" />
+                </svg>
+            </span>
+            {% trans "Sign Up" %}
+        </button>
+    </div>
+
+    </form>
+  </div>
+</div>
 
 {% endblock %}
+
