--- a/keenclone/templates/index.html
+++ b/keenclone/templates/index.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base_hero.html' %}
 {% load ratings reviews %}
 
 
@@ -7,27 +7,116 @@
 
 {% include "nav/pagination.html" %}
     <div class="row">
-      
-
-<header id="up" class="bg-center bg-fixed bg-no-repeat bg-center bg-cover h-screen relative">
-		<!-- Overlay Background + Center Control -->
-		<div class="h-screen bg-opacity-50 bg-black flex items-center justify-center" style="background:rgba(0,0,0,0.5);">
-			<div class="mx-2 text-center">
-				<h1 class="text-gray-100 font-extrabold text-4xl xs:text-5xl md:text-6xl"><span class="text-white">Right</span> Place To</h1>
-           <h2 class="text-gray-200 font-extrabold text-3xl xs:text-4xl md:text-5xl leading-tight">
-            Get a <span class="text-white">Better</span> and <span class="text-white">Professionals</span> Design
-           </h2>
-           <div class="inline-flex">
-           <button class="p-2 my-5 mx-2 bg-indigo-700 hover:bg-indigo-800 font-bold text-white rounded border-2 border-transparent hover:border-indigo-800 shadow-md transition duration-500 md:text-xl">Hire US!</button>
-           <a href="#about"><button class="p-2 my-5 mx-2 bg-transparent border-2 bg-indigo-200 bg-opacity-75 hover:bg-opacity-100 border-indigo-700 rounded hover:border-indigo-800 font-bold text-indigo-800 shadow-md transition duration-500 md:text-lg">Learn More</button></a>
-           </div>
-        </div>
-    </div>
-</header>
+        <section class="">
 
 
 
-      
+
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>
+            tailwind collapsible
+        </title>
+        <link href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/tailwind.min.css" rel="stylesheet">
+        </link>
+    </head>
+    <body>
+        <main class="w-3/5 p-8 mx-auto">
+            <h1 class="mb-4">
+                tailwind collapsible
+            </h1>
+            <section class="shadow">
+                <article class="border-b">
+                    <div class="border-l-2 border-transparent">
+                        <header class="flex justify-between items-center p-5 pl-8 pr-8 cursor-pointer select-none">
+                            <span class="text-grey-darkest font-thin text-xl">
+                                Massa vitae tortor condimentum lacinia quis vel eros donec
+                            </span>
+                            <div class="rounded-full border border-grey w-7 h-7 flex items-center justify-center">
+                                <!-- icon by feathericons.com -->
+                                <svg aria-hidden="true" class="" data-reactid="266" fill="none" height="24" stroke="#606F7B" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewbox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+                                    <polyline points="6 9 12 15 18 9">
+                                    </polyline>
+                                </svg>
+                            </div>
+                        </header>
+                    </div>
+                </article>
+                <article class="border-b">
+                    <div class="border-l-2 bg-grey-lightest border-indigo">
+                        <header class="flex justify-between items-center p-5 pl-8 pr-8 cursor-pointer select-none">
+                            <span class="text-indigo font-thin text-xl">
+                                Lorem ipsum dolor sit amet
+                            </span>
+                            <div class="rounded-full border border border-indigo w-7 h-7 flex items-center justify-center bg-indigo">
+                                <!-- icon by feathericons.com -->
+                                <svg aria-hidden="true" data-reactid="281" fill="none" height="24" stroke="white" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewbox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+                                    <polyline points="18 15 12 9 6 15">
+                                    </polyline>
+                                </svg>
+                            </div>
+                        </header>
+                        <div>
+                            <div class="pl-8 pr-8 pb-5 text-grey-darkest">
+                                <ul class="pl-4">
+                                    <li class="pb-2">
+                                        consectetur adipiscing elit
+                                    </li>
+                                    <li class="pb-2">
+                                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
+                                    </li>
+                                    <li class="pb-2">
+                                        Viverra orci sagittis eu volutpat odio facilisis mauris
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+                <article class="border-b">
+                    <div class="border-l-2 border-transparent">
+                        <header class="flex justify-between items-center p-5 pl-8 pr-8 cursor-pointer select-none">
+                            <span class="text-grey-darkest font-thin text-xl">
+                                Lorem dolor sed viverra ipsum
+                            </span>
+                            <div class="rounded-full border border-grey w-7 h-7 flex items-center justify-center">
+                                <!-- icon by feathericons.com -->
+                                <svg aria-hidden="true" class="" data-reactid="266" fill="none" height="24" stroke="#606F7B" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewbox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+                                    <polyline points="6 9 12 15 18 9">
+                                    </polyline>
+                                </svg>
+                            </div>
+                        </header>
+                    </div>
+                </article>
+                <article class="border-b">
+                    <div class="border-l-2 border-transparent">
+                        <header class="flex justify-between items-center p-5 pl-8 pr-8 cursor-pointer select-none">
+                            <span class="text-grey-darkest font-thin text-xl">
+                                Egestas sed tempus urna
+                            </span>
+                            <div class="rounded-full border border-grey w-7 h-7 flex items-center justify-center">
+                                <!-- icon by feathericons.com -->
+                                <svg aria-hidden="true" class="" data-reactid="266" fill="none" height="24" stroke="#606F7B" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewbox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+                                    <polyline points="6 9 12 15 18 9">
+                                    </polyline>
+                                </svg>
+                            </div>
+                        </header>
+                    </div>
+                </article>
+            </section>
+        </main>
+    </body>
+</html>
+
+
+
+
+
+
+        </section>      
     </div>
 {% include "nav/pagination.html" %}
 </div>
